--- a/brevets/docker-compose.yml
+++ b/brevets/docker-compose.yml
@@ -4,9 +4,13 @@ services:
     web:
         build: .
         command: python -u flask_brevets.py
+        volumes:
+            - .:/app/
         ports:
-            - "5000:5000"
-        links:
-            - db
-    db:
+            - "5001:5000"
+        depends_on:
+            - ourdb
+        environment:
+            MONGODB_HOSTNAME: ourdb
+    ourdb:
         image: mongo:latest
