--- a/brevets/Dockerfile
+++ b/brevets/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /app
 RUN pip install -r requirements.txt
 # ENTRYPOINT ["python"]
 # CMD ["flask_brevets.py"]
-# RUN chmod +x run_tests.sh
+RUN chmod +x run_tests.sh
